# CSO7024-template

./: README.md  gitignore
app/: Dockerfile  calculator.py  requirements-dev.txt
app/tests/: test_calculator.py
cso7024-devops-labs/: LICENSE  README.md  SETUP.md
cso7024-devops-labs/app/: app.py  pyproject.toml  requirements.txt
cso7024-devops-labs/docs/: lab-brief-index.md
cso7024-devops-labs/labs/week3-cicd/: 3.2-lab-design-and-write-your-first-ci-pipeline.md  3.3-lab-configure-break-and-fix-a-real-pipeline.md
cso7024-devops-labs/labs/week4-iac/: 4.2-lab-your-first-terraform-configuration.md
cso7024-devops-labs/labs/week4-iac/starter/: README.md
cso7024-devops-labs/labs/week5-config-mgmt/starter/: README.md
cso7024-devops-labs/labs/week6-containers/: 6.2-lab-a-multi-container-deployment-with-docker-compose.md  6.3-lab-deploy-to-kubernetes.md
docs/: lab-brief-index.md
labs/week2-version-control/: 2.1-lab-your-first-repository.md  2.2-lab-branching-merging-and-a-three-way-conflict.md  2.3-lab-rebase-cherry-pick-and-a-pull-request.md
labs/week3-cicd/: 3.2-lab-design-and-write-your-first-ci-pipeline.md  3.3-lab-configure-break-and-fix-a-real-pipeline.md
labs/week3-cicd/starter/: README.md  ci.yml
labs/week4-iac/: 4.3-lab-remote-state-environments-and-drift.md
labs/week4-iac/starter/: main.tf
labs/week5-config-mgmt/: 5.2-lab-your-first-ansible-playbook.md  5.3-lab-an-integrated-provision-then-configure-pipeline.md
labs/week5-config-mgmt/starter/: README.md
labs/week6-containers/: 6.1-lab-your-first-dockerfile.md
(+21 files in other folders)
