# Project metadata. Added in lab 3.3 so the application is buildable as a wheel
# in the packaging stage of the Continuous Integration pipeline.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cso7024-app"
version = "0.1.0"
description = "Shared sample application for the CSO7024 DevOps labs"
requires-python = ">=3.12"

[tool.setuptools]
py-modules = ["app", "calculator"]

[tool.ruff]
# Keep linting gentle for a teaching repository.
line-length = 100
